hamberger z-index fix

--- a/src/components/Hamburger/hamburgerButton.module.scss
+++ b/src/components/Hamburger/hamburgerButton.module.scss
@@ -8,7 +8,7 @@
   margin: 14px 16px 0;
   background-color: transparent;
   cursor: pointer;
-  // z-index: 3;
+  z-index: 20;
 
   &::before,
   &::after {
